package net.mguenther.kafkasampler.tweetprocessing.domain;

/**
 * @author Markus Günther (markus.guenther@gmail.com)
 */
public enum Sentiment {

    NEGATIVE,
    NEUTRAL,
    POSITIVE,
    UNDEFINED
}
